<resources>
    <string name="app_name">Cinemapedia</string>
    <string name="poster">Poster</string>
    <string name="title">title</string>
    <string name="point">Point</string>
    <string name="release_date">Release date</string>
    <string name="genre">Genre</string>
    <string name="release_on">Release on</string>
    <string name="sort">Sort</string>
    <string name="most_popular">Most popular</string>
    <string name="upcoming">Upcoming</string>
    <string name="top_rated">Top rated</string>
    <string name="category">Category</string>
    <string name="year">Year</string>
    <string name="rate">Rate</string>
    <string name="overview">Overview</string>
    <string name="movie">Movie</string>
    <string name="per_rated">/10</string>
    <string name="trailer">Trailer</string>
    <string name="review">Review</string>
    <string name="no_review">No Review</string>
    <string name="name">Name</string>
    <string name="content">Content</string>
    <string name="favorite">Favorite</string>
    <string name="no_trailer">No Trailer</string>
    <string name="now_playing">Now playing</string>
    <string name="whatsnew">What\'s new ?</string>
    <string name="gotit">Got it</string>
    <string name="close">Close</string>


</resources>
