<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/margin_normal"
            >

            <android.support.v4.widget.Space
                android:layout_width="@dimen/margin_normal"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/image_poster"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="center"
                android:adjustViewBounds="true" />

            <android.support.v4.widget.Space
                android:layout_width="@dimen/margin_normal"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextStyle.Large"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack_1000"
                    android:text="@string/year"/>


                <TextView
                    android:id="@+id/textView_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextStyle.Medium"
                    android:textColor="@color/colorBlack_1000"
                    android:text="@string/rate"/>

                <android.support.v4.widget.Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/margin_small" />

                <TextView
                    android:id="@+id/textView_genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_normal"
                    android:textAppearance="@style/TextStyle.Small"
                    android:textColor="@color/colorBlue_900"/>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            android:textAppearance="@style/TextStyle.Medium"
            android:text="@string/overview"/>

        <android.support.v4.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin_normal" />

    </LinearLayout>

</layout>